<resources>
    <string name="app_name">RetrofitGson</string>
    <string name="Gson">Gson</string>
    <string name="Retrofit">Retrofit</string>
    <string name="error">không có kết nối internet</string>
    <string name="cafe">Cafe</string>
    <string name="atm">ATM</string>
    <string name="food">Food</string>
    <string name="menu">Menu</string>
    <string name="hotel">Hotel</string>
    <string name="bar">Bar</string>
</resources>
