<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/menu"
        android:title="@string/menu"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/cafe"
                android:icon="@drawable/cafe"
                android:title="@string/cafe"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/atm"
                android:icon="@drawable/atm"
                android:title="@string/atm"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/food"
                android:icon="@drawable/food"
                android:title="@string/food"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/hotel"
                android:icon="@drawable/hotel"
                android:title="@string/hotel"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/bar"
                android:icon="@drawable/beer"
                android:title="@string/bar"
                app:showAsAction="always|withText" />


        </menu>
    </item>
    ...(more menu items here)
</menu>